examples/errors/parsing/simple_refined.rcn
// A trivial refined program: annotated tuple with an int
main : (x : Int) [pure] =
  (42) : (x : Int)
